force-app/main/default/objects/Template_Parameter__c/Template_Parameter__c.object-meta.xml
<CustomObject>
    <label>Template Mapping</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Template Paramter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template  Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>