force-app/main/default/objects/Template_Parameter__c/fields/Example_Text__c.field-meta.xml
<CustomField>
    <fullName>Example_Text__c</fullName>
    <label>Example Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>