force-app/main/default/objects/Template_Parameter__c/fields/Object_name__c.field-meta.xml
<CustomField>
    <fullName>Object_name__c</fullName>
    <label>Object name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>