force-app/main/default/objects/Template_Parameter__c/fields/Parameter_Name__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Name__c</fullName>
    <label>Parameter Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>