force-app/main/default/objects/Template_Parameter__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Template_Object__c</referenceTo>
    <relationshipLabel>Template  Mappings</relationshipLabel>
    <relationshipName>Template_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>